[tool.poetry]
name = "todobien"
version = "0.1.0"
description = ""
authors = ["shiladitya <shiladitya_basu@live.com>"]
readme = "README.md"

[tool.poetry.scripts]
todobien = "todobien.cli:app"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
